@@ -1,3 +1,8 @@
+2001-10-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (boundingBox): Method to return smallest bounding
+ 	box enclosing non-border pixels.  Still needs documentation.
+
 2001-10-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (getConstIndexes): Add method to obtain read-only
